It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Sun, Jan 2, 2010
---------------------------------------------------------------------
- Return stringified hook data when called from within templates, and the actual data otherwise.

Thu, Dec 31, 2009
---------------------------------------------------------------------
- Version 0.9.9a -- Happy New Year!
- Added [rake crm:settings:show] task.
- Minor fixes.

Wed, Dec 30, 2009
---------------------------------------------------------------------
- More Ruby 1.9 compatibility fixes: all specs pass.

Tue, Dec 29, 2009
---------------------------------------------------------------------
- Fixed Ruby 1.9 compatibility issues with I18n.t (thanks, Gavin!)
- Fixed rendering of callback hooks to be compatible with Ruby 1.9.
- Fixed password reset submission form (thanks, Roman!)

Mon, Dec 28, 2009
---------------------------------------------------------------------
- XSS cleanup across views and models (thanks, Louis!)
- Refactoring permissions templates (thanks, Rit!)
- Updated README file.
- Version 0.9.9 (yay!)

Sat, Dec 19, 2009
---------------------------------------------------------------------
- Fixed deprecation warning when adding a new comment.
- Fixed Apache/Passenger issue of not being able to load tab settings.
- Merged in I18n branch: Fat Free CRM could be easily localized now by dropping in config/locales file.
- Added exception handling and custom 500 status code template.

Mon, Dec 14, 2009
---------------------------------------------------------------------
- Make sure no activity records are left behind when model record gets deleted from the database.

Sun, Dec 13, 2009
---------------------------------------------------------------------
- Fixed broken sidebar search in Admin/Users.
- Refactored sidebar rendering to explicitly check if template file exists.
