@@ -8,32 +8,49 @@ describe CommentsController do
     require_user
   end
 
-  # def mock_comment(stubs={})
-  #   @mock_comment ||= mock_model(Comment, stubs)
-  # end
-  
   # GET /comments
-  # GET /comments.xml                                           not implemented
+  # GET /comments.xml
   #----------------------------------------------------------------------------
-  # describe "responding to GET index" do
-  # 
-  #   it "should expose all comments as @comments" do
-  #     Comment.should_receive(:find).with(:all).and_return([mock_comment])
-  #     get :index
-  #     assigns[:comments].should == [mock_comment]
-  #   end
-  # 
-  #   describe "with mime type of xml" do
-  #     it "should render all comments as xml" do
-  #       request.env["HTTP_ACCEPT"] = "application/xml"
-  #       Comment.should_receive(:find).with(:all).and_return(comments = mock("Array of Comments"))
-  #       comments.should_receive(:to_xml).and_return("generated XML")
-  #       get :index
-  #       response.body.should == "generated XML"
-  #     end
-  #   end
-  # 
-  # end
+  describe "responding to GET index" do
+    COMMENTABLE.each do |asset|
+      describe "(HTML)" do
+        before(:each) do
+          @asset = Factory(asset)
+        end
+
+        it "should redirect to the asset landing page if the asset is found" do
+          get :index, :"#{asset}_id" => @asset.id
+          response.should redirect_to(:controller => asset.to_s.pluralize, :action => :show, :id => @asset.id)
+        end
+
+        it "should redirect to root url with warning if the asset is not found" do
+          get :index, :"#{asset}_id" => @asset.id + 42
+          flash[:warning].should_not == nil
+          response.should redirect_to(root_url)
+        end
+      end # HTML
+
+      describe "(XML)" do
+        before(:each) do
+          @asset = Factory(asset)
+          @asset.comments = [ Factory(:comment, :commentable => @asset) ]
+          request.env["HTTP_ACCEPT"] = "application/xml"
+        end
+
+        it "should render all comments as XML if the asset is found found" do
+          get :index, :"#{asset}_id" => @asset.id
+          response.body.should == @asset.comments.to_xml
+        end
+
+        it "XML: should return 404 (Not Found) XML error if the asset is not found" do
+          get :index, :"#{asset}_id" => @asset.id + 42
+          flash[:warning].should_not == nil
+          response.code.should == "404"
+        end
+      end # XML
+    end # COMMENTABLE.each
+
+  end
 
   # GET /comments/1
   # GET /comments/1.xml                                         not implemented
@@ -62,7 +79,7 @@ describe CommentsController do
   # GET /comments/new.xml                                                  AJAX
   #----------------------------------------------------------------------------
   describe "responding to GET new" do
-  
+
     COMMENTABLE.each do |asset|
       it "should expose a new comment as @comment for #{asset}" do
         @asset = Factory(asset)
@@ -73,7 +90,7 @@ describe CommentsController do
         assigns[:commentable].should == asset.to_s
         response.should render_template("comments/new")
       end
-      
+
       it "should save the fact that a comment gets added to #{asset}" do
         @asset = Factory(asset)
         @comment = Comment.new
@@ -102,7 +119,7 @@ describe CommentsController do
       it "should redirect to #{asset}'s index page with the message if the #{asset} got protected" do
         @asset = Factory(asset, :access => "Private")
         @comment = Comment.new
-        
+
         xhr :get, :new, "#{asset}_id".to_sym => @asset.id
         flash[:warning].should_not == nil
         response.body.should == %Q(window.location.href = "/#{asset.to_s.pluralize}";)
@@ -154,7 +171,7 @@ describe CommentsController do
         end
       end
     end
-    
+
   end
 
   # PUT /comments/1
