@@ -4,7 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
-Sun, Jan 2, 2010
+Mon, Jan 4, 2010
+---------------------------------------------------------------------
+- Implemented REST API for fetching asset notes (thanks, Adrian!)
+
+Sun, Jan 3, 2010
 ---------------------------------------------------------------------
 - Return stringified hook data when called from within templates, and the actual data otherwise.
 
